client/src/events/mission/Login/Login.scss
.aa-login-container {
  background: url("../../../../public/assets/images/agent-mission/rewards-interface-BG.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;

  .login-container {
    background-color: rgba(255, 255, 255, 0.7);
    border-radius: 10px;
    width: 25%;

    @media (max-width: 768px) {
      width: 80%;
    }

    padding: 30px;
    padding-top: 75px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);

  }

  .login-caption {
    position: absolute;
    right: 0;
    padding-right: 20px;
  }

  .image-container {
    position: relative;
    width: 100%;
    /* Adjust the width as needed */
    height: 120px;
    /* Adjust the height as needed */
    display: flex;
    align-items: center;
    justify-content: center;
    padding-bottom: 30px;

    .top-image {
      width: 250px;
      top: 0;
      margin: 0;
      display: flex;
      align-items: center;
      justify-content: center;
    }

    .buttom-image {
      position: absolute;
      width: 150px;
      opacity: 0.3;
    }
  }


  button {
    background: url("../../../../public/assets/images/agent-mission/modal-bg.png") no-repeat center center;
    background-size: cover;
    margin-bottom: 1rem;
    cursor: pointer;
    border-radius: 3px;
    padding: 10px;
    width: 100%;
    border: none;
    font-size: 1.3rem;
    color: #ffffff;
    position: relative;
    overflow: hidden;
  }

  button:disabled,
  button[disabled] {
    background: url();
    border: 1px solid #999999;
    background-color: #cccccc;
    color: #666666;
    cursor: not-allowed;
  }

  .primary-cfs-btn {
    background: #007dfa;
    color: #fff;

    &:hover {
      opacity: 0.8;
    }
  }

  .recaptcha {
    margin-bottom: 1rem;
    align-items: center;
    display: flex;
    justify-content: center;
  }

  .text-field-container {
    display: flex;
    align-items: center;
    width: 100%;
    background-color: #ffffff;
  }

  .text-field-icon {
    margin-right: 8px;
    display: flex;
    align-items: center;
    padding: 0;
  }

  .MuiInputBase-input {
    padding-top: 15px;
    padding-right: 10px;
  }

  .MuiInputAdornment-root {
    display: flex;
    padding-bottom: 10px;
  }

  .error-alert {
    display: flex;
    align-items: center;
  }

  .error-alert .MuiAlert-icon {
    margin-right: 8px;
  }
}

